Implementation of basic Spring Security - Create user and consult secret