@@ -7,7 +7,9 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 @AllArgsConstructor
 @Data
@@ -16,7 +18,11 @@ public class UserSecurityEntity implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(user.getAuthority()));
+        try {
+            return List.of(new SimpleGrantedAuthority(user.getAuthority()));
+        } catch (IllegalArgumentException e) {
+            return Collections.emptyList();
+        }
     }
 
     @Override
